fix: UC-11: fix bugs related to timezone of the date field of the responses after calling APIs
