# src/main/java/hcmute/manage/club/uteclubs/controller/ClubControllerLeader.java
@@ -5,11 +5,9 @@ import hcmute.manage.club.uteclubs.framework.dto.club.ClubAcceptMemberParam;
 import hcmute.manage.club.uteclubs.framework.dto.club.ClubAddPersonParams;
 import hcmute.manage.club.uteclubs.framework.dto.club.ClubResponse;
 import hcmute.manage.club.uteclubs.framework.dto.user.UserResponse;
-import hcmute.manage.club.uteclubs.framework.dto.user_club.UserClubResponse;
 import hcmute.manage.club.uteclubs.service.ClubService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -32,8 +30,8 @@ public class ClubControllerLeader implements ClubAPI_Leader {
     }
 
     @Override
-    public ResponseEntity<UserClubResponse> addMember(String clubId, ClubAddPersonParams params) {
-        return new ResponseEntity<>(clubService.addPersonToClub(clubId, params, false), HttpStatus.CREATED);
+    public ResponseEntity<String> addMember(String clubId, ClubAddPersonParams params) {
+        return ResponseEntity.ok(clubService.addPersonToClub(clubId, params, false));
     }
 
     @Override
