# src/main/java/hcmute/manage/club/uteclubs/framework/api/ClubAPI_Leader.java
@@ -4,7 +4,6 @@ import hcmute.manage.club.uteclubs.framework.dto.club.ClubAcceptMemberParam;
 import hcmute.manage.club.uteclubs.framework.dto.club.ClubAddPersonParams;
 import hcmute.manage.club.uteclubs.framework.dto.club.ClubResponse;
 import hcmute.manage.club.uteclubs.framework.dto.user.UserResponse;
-import hcmute.manage.club.uteclubs.framework.dto.user_club.UserClubResponse;
 import org.springframework.data.domain.Page;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
@@ -33,7 +32,7 @@ public interface ClubAPI_Leader {
     );
 
     @PostMapping("/{clubId}/add-members")
-    ResponseEntity<UserClubResponse> addMember(
+    ResponseEntity<String> addMember(
             @PathVariable("clubId")
             @NotBlank(message = "The club ID is required")
             @Pattern(regexp = COMMON_ID_PATTERN, message = "The club ID must contain numeric characters only")
